# basic-arlo-assistant

./: .gitignore  README.md  pyproject.toml
baa/: arlo_api.py  classes.py  cli.py  exceptions.py  helpers.py  main.py
baa/attendee_parser/: attendee.py  butter.py
tests/: test_arlo_api.py  test_butter_parser.py  test_classes.py  test_cli.py  test_helpers.py  test_main.py
