[tool.poetry]
name = "baa"
version = "0.1.0"
description = ""
authors = ["Kishan <kishan.o@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.32.3"
keyring = "^25.4.1"
lxml = "^5.3.0"
prettytable = "^3.11.0"

[tool.poetry.scripts]
baa = "baa.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
